--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   spider: ^4.2.2
-  curved_labeled_navigation_bar: ^2.0.2
+  circle_nav_bar: ^2.0.1+1
+  
   
 
 dev_dependencies:
