--- a/spider.yaml
+++ b/spider.yaml
@@ -27,9 +27,9 @@ use_references_list: false
 #   file_name: my_fonts
 
 # Location where all the generated references will be stored
-package: resources
+package: utils/resources
 
 groups:
   - path: assets/imgs
     class_name: Images
-    types: [ .png, .jpg, .jpeg,]
+    types: [ .png, .jpg, .jpeg, .svg]
