--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   circle_nav_bar: ^2.0.1+1
   flutter_svg: ^2.0.9
   banner_carousel: ^1.2.1
-  firebase_auth: ^4.17.4
+  firebase_auth: ^4.17.9
   firebase_core: ^2.25.4
   flutter_bloc: ^8.1.4
   shared_preferences: ^2.2.2
@@ -48,6 +48,7 @@ dependencies:
   build_runner: ^2.4.8
   auto_route_generator: ^7.3.2
   provider: ^6.1.2
+  google_maps_flutter: ^2.6.0
   
   
   
